--- a/pages/tabBar/me/me.wxss
+++ b/pages/tabBar/me/me.wxss
@@ -6,14 +6,15 @@
 }
 
 .small-logo-view {
+  height: 32rpx;
   padding: 16rpx 32rpx 0 0;
 }
 
 .small-logo {
   color: #fff;
   font-size: 24rpx;
-  line-height: 24rpx;
-  padding: 4rpx 8rpx;
+  line-height: 32rpx;
+  padding: 0 8rpx;
   background-color: #6c0;
   border-radius: 4rpx;
 }
