--- a/pages/index/pages/goOrder/goOrder.wxml
+++ b/pages/index/pages/goOrder/goOrder.wxml
@@ -5,18 +5,23 @@
     <view class='textarea-view'>
       <textarea class='textarea' placeholder="货物是否超长超宽？是否有其他特殊需求？" bindinput="bindGetNotes"></textarea>
     </view>
-    <view class='need-info'>
+    <view wx:if="{{ !userInfo.Type }}" class='need-info'>
       <view class='money-info-view clearfix'>
         <view class='money'>￥{{ orderData.Price }}</view>
         <view class='standard'>收费标准</view>
       </view>
       <view class='car-money'>
-        <view>起步价（中型货车）</view>
-        <view>￥25</view>
+        <view>起步价（{{ orderData.TruckType }}）</view>
+        <view>￥{{ orderData.StartPrice }}</view>
       </view>
       <view class='car-money'>
-        <view>起步价（中型货车）</view>
-        <view>￥25.5</view>
+        <view>起步价（{{ orderData.TruckType }}）</view>
+        <view>￥{{ orderData.PreviewPrice }}</view>
+      </view>
+    </view>
+    <view wx:if="{{ userInfo.Type }}"  class='typeN'>
+      <view>
+        您是定价用户,费用情况将由工作人员为您处理。
       </view>
     </view>
     <view>
