--- a/pages/tabBar/order/order.wxss
+++ b/pages/tabBar/order/order.wxss
@@ -1,9 +1,13 @@
 /* pages/tabBar/order/order.wxss */
 
 .tab-h-view {
+  width: 100%;
   height: 92rpx;
   background-color: #fff;
   border-bottom: 1rpx solid #dedede;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .tab-item {
@@ -21,7 +25,9 @@
   color: #f90;
   border-bottom: 4rpx solid #f90;
 }
-
+.main-item-view {
+  padding-top: 92rpx;
+}
 .item {
   padding: 0 50rpx;
   background-color: #fff;
