--- a/pages/order/pages/orderInfo/orderInfo.wxml
+++ b/pages/order/pages/orderInfo/orderInfo.wxml
@@ -4,8 +4,8 @@
     <view class='header mb-8'>
       <view wx:if="{{current != 1}}" class='clearfix bb'>
         <view class='car fl'>
-          <view>{{ driverData.Num }}</view>
-          <view>{{ driverData.TruckName }}</view>
+          <view>{{ driverData.Num || ''}}</view>
+          <view>{{ driverData.TruckName || ''}}</view>
         </view>
         <view class='fl'>
           <image class='avatar' src='{{ server + driverData.Face }}'></image>
@@ -38,35 +38,30 @@
     </view>
     <view class='some-address mb-8'>
       <view class='bb'>
-        <!-- <image src='../../../../image/icon/car.png'></image> -->
         <text>起运地：</text>
         {{ data.ReciveAddr }}
       </view>
       <view class='bb'>
-        <!-- <image src='../../../../image/icon/add.png'></image> -->
         <text>目的地：</text>
         {{ data.SendAddr }}
       </view>
     </view>
     <view class='some-address'>
       <view class='bb'>
-        <!-- <image src='../../../../image/icon/time.png'></image> -->
         <text>时间：</text>
         {{ data.SendTime }}
       </view>
       <view class='bb'>
-        <!-- <image src='../../../../image/icon/who.png'></image> -->
         <text>收货人：</text>
-        {{ data.TempReciveUser }}
+        {{ data.TempSendUser }}
       </view>
       <view class='bb'>
-        <!-- <image src='../../../../image/icon/tel.png'></image> -->
         <text>电话：</text>
         {{ data.RecivePhone }}
       </view>
       <view wx:if="{{current != 1}}" class='info clearfix'>
-        <image class='fl' src='../../../../image/icon/info.png'></image>
-        <view class='fl'>{{ data.Notes || "无" }}</view>
+         <text>备注：</text>
+        {{ data.Notes || "无" }}
       </view>
     </view>
     <view wx:if="{{current == 1}}" class='btns'>
@@ -74,7 +69,7 @@
       <!-- <image src='../../../../image/icon/go-address.png'></image> 查看当前位置</button> -->
       <button class='no' bindtap='bindDel'>取消订单</button>
     </view>
-    <view wx:if="{{current == 2}}" class='btns'>
+    <view wx:if="{{current == 21}}" class='btns'>
       <button class='go-map' bindtap='bindGoMap'>
         <image src='../../../../image/icon/go-address.png'></image> 查看当前位置</button>
       <!-- <button class='no'>取消订单</button> -->
@@ -95,7 +90,7 @@
       </view>
       <button class='grade' bindtap="bindGiveStar">评价</button>
     </view>
-    <view wx:if="{{current == 2}}" class='over-order'>
+    <view wx:if="{{current == 21}}" class='over-order'>
       <view class='btns'>
         <button class='go-map' bindtap='bindPay'>立即支付</button>
         <button class='no'>完成订单</button>
