--- a/pages/me/meInfo/meInfo.wxml
+++ b/pages/me/meInfo/meInfo.wxml
@@ -6,15 +6,15 @@
   </view>
   <view class='tel clearfix bb'>
     <view class='fl'>电话:</view>
-    <input class='fr' value='{{ Tel1 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel01'></input>
+    <input class='fr' type='number' value='{{ Tel1 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel01'></input>
   </view>
   <view class='tel clearfix bb'>
     <view class='fl'></view>
-    <input class='fr' value='{{ Tel2 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel02'></input>
+    <input class='fr' type='number' value='{{ Tel2 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel02'></input>
   </view>
   <view class='tel clearfix bb'>
     <view class='fl'></view>
-    <input class='fr' value='{{ Tel3 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel03'></input>
+    <input class='fr' type='number' value='{{ Tel3 }}' maxlength='11' placeholder='请输入电话号码' bindinput='bindGetCallTel03'></input>
   </view>
   <view class='company clearfix bb'>
     <view class='fl'>公司:</view>
