--- a/pages/tabBar/order/order.wxml
+++ b/pages/tabBar/order/order.wxml
@@ -1,10 +1,11 @@
 <!--pages/tabBar/order/order.wxml-->
 <view class='container'>
   <view class="tab-h-view">
-    <view class="tab-item {{current == 1? 'active': ''}}" data-index="1" bindtap='navSwitch'>进行中</view>
+    <view class="tab-item {{current == 10? 'active': ''}}" data-index="10" bindtap='navSwitch'>待配送</view>
+    <view class="tab-item {{current == 20? 'active': ''}}" data-index="20" bindtap='navSwitch'>进行中</view>
     <view class="tab-item {{current == 21? 'active': ''}}" data-index="21" bindtap='navSwitch'>待付款</view>
-    <view class="tab-item {{current == 3? 'active': ''}}" data-index="3" bindtap='navSwitch'>待评价</view>
-    <view class="tab-item {{current == 4? 'active': ''}}" data-index="4" bindtap='navSwitch'>已完成</view>
+    <view class="tab-item {{current == 30? 'active': ''}}" data-index="30" bindtap='navSwitch'>待评价</view>
+    <view class="tab-item {{current == 40? 'active': ''}}" data-index="40" bindtap='navSwitch'>已完成</view>
   </view>
   <view class='main-item-view'>
     <view wx:if='{{ dataLen != 0 }}' wx:for="{{ data }}" wx:key="{{ item.ID }}" class='item bb' data-current='{{ current }}' data-id='{{ item.ID }}' bindtap='bindGoOrderInfo'>
