--- a/pages/index/pages/onekey/onekey.wxml
+++ b/pages/index/pages/onekey/onekey.wxml
@@ -5,14 +5,20 @@
     <view class='make-view'>
       <textarea></textarea>
     </view>
-    <view>
-      <view>
-        <image></image>
+    <view class='img-box clearfix'>
+      <view wx:if='{{ imgTempFilePath }}' class='img-box fl'>
+        <image class='chs-img' src='{{ imgTempFilePath }}' data-src='{{ imgTempFilePath }}' bindtap='bindSeeImg'></image>
+      </view>
+      <view wx:if='{{ !imgTempFilePath }}' class='add-img fl' bindtap='bindChooseImg'>
+        +
       </view>
     </view>
     <view class='btn-view'>
+      <audio wx:if='{{ mp3TempFilePath }}' poster="{{poster}}" name="{{mp3Name}}" author="{{author}}" src="{{ mp3TempFilePath }}" id="myAudio" controls loop></audio>
+      <button class='mp3-btn' bindtouchstart='speechStart' bindtouchend='speechStop'>{{ beginCon }}</button>
+      <!-- <button wx:if = '{{ mp3TempFilePath }}' class='mp3-btn' type='primary' bindtap='bindPlay'>播放</button> -->
       <form bindsubmit="submit" report-submit='true'>
-        <button form-type="submit" type="default" size="mini">提交</button>
+        <button class='go-btn' type='primary' form-type="submit">提交</button>
       </form>
     </view>
   </view>
